--- a/web-app/app/styles/css/main.css
+++ b/web-app/app/styles/css/main.css
@@ -8870,6 +8870,16 @@ a.list-group-item-danger.active:hover, a.list-group-item-danger.active:focus {
   background-color: #464545;
 }
 
+/* line 1, ../partials/_main.scss */
+.main-col {
+  margin-left: -10px;
+}
+
+/* line 5, ../partials/_main.scss */
+.sub-col {
+  margin-left: 10px;
+}
+
 /* line 2, ../partials/_welcome.scss */
 .welcome .message {
   color: red;
