--- a/web-app/app/styles/css/main.css
+++ b/web-app/app/styles/css/main.css
@@ -9043,66 +9043,67 @@ input[type="radio"], input[type="checkbox"] {
   border-radius: 5px;
   margin-top: 8px;
   background-color: #fafafa;
+  min-height: 510px;
 }
 
-/* line 16, ../partials/_main.scss */
+/* line 17, ../partials/_main.scss */
 .single-video-box-inner {
-  height: 230px;
+  height: 250px;
   width: 100%;
   border: 1px grey solid;
   border-radius: 5px;
 }
 
-/* line 23, ../partials/_main.scss */
+/* line 24, ../partials/_main.scss */
 .single-video-box-outer {
   margin: 8px;
 }
 
-/* line 27, ../partials/_main.scss */
+/* line 28, ../partials/_main.scss */
 .chat-box-heading {
   font-size: 32px;
 }
 
-/* line 30, ../partials/_main.scss */
+/* line 31, ../partials/_main.scss */
 .chat-box-btn-box {
   margin-top: 5px;
 }
 
-/* line 34, ../partials/_main.scss */
+/* line 35, ../partials/_main.scss */
 .chat-box-main {
   margin-top: 15px;
   margin-bottom: 5px;
 }
 
-/* line 38, ../partials/_main.scss */
+/* line 39, ../partials/_main.scss */
 .chat-box-subLine {
   font-size: 16px;
   font-weight: 500;
 }
 
-/* line 43, ../partials/_main.scss */
+/* line 44, ../partials/_main.scss */
 .chat-message {
   margin-top: 1px;
 }
 
-/* line 47, ../partials/_main.scss */
+/* line 48, ../partials/_main.scss */
 .chat-message-user1-name {
   color: #0000ff;
   font-weight: bold;
 }
 
-/* line 52, ../partials/_main.scss */
+/* line 53, ../partials/_main.scss */
 .chat-message-text {
   font-style: italic;
 }
 
-/* line 56, ../partials/_main.scss */
+/* line 57, ../partials/_main.scss */
 .chat-message-user2-name {
   color: red;
   font-weight: bold;
 }
 
-/* line 61, ../partials/_main.scss */
+/* line 62, ../partials/_main.scss */
 .chat-message-create-box {
   border: 1px grey solid;
   border-radius: 5px;
@@ -9110,16 +9111,21 @@ input[type="radio"], input[type="checkbox"] {
   margin-top: 10px;
 }
 
-/* line 68, ../partials/_main.scss */
+/* line 69, ../partials/_main.scss */
 .chat-message-create-textarea {
   width: 100%;
   height: 50px;
 }
 
-/* line 73, ../partials/_main.scss */
+/* line 74, ../partials/_main.scss */
 .chat-message-create-sendbtn {
   width: 100%;
   height: 50px;
+}
+
+/* line 79, ../partials/_main.scss */
+.chat-box-subMain {
+  min-height: 350px;
 }
 
 /* line 2, ../partials/_welcome.scss */
