--- a/web-app/app/styles/partials/_main.scss
+++ b/web-app/app/styles/partials/_main.scss
@@ -11,10 +11,11 @@
   border-radius: 5px;
   margin-top: 8px;
   background-color: #fafafa;
+  min-height: 510px;
 }
 
 .single-video-box-inner{
-  height: 230px;
+  height: 250px;
   width: 100%;
   border: 1px grey solid;
   border-radius: 5px;
@@ -75,3 +76,6 @@
   height: 50px;
 }
 
+.chat-box-subMain{
+  min-height: 350px;
+}
